syntax = "proto3";
package lastmile;
option java_package = "lastmile";
option java_multiple_files = true;

message AreaEdge {
  string to_area_id = 1;
  int32 travel_minutes = 2;
}

message Area {
  string id = 1;
  string name = 2;
  bool is_station = 3;
  repeated AreaEdge neighbours = 4;
}

message UserId { string id = 1; }